abstract faq-list to definition list, fixing JS, CSS etc. and including in the curriculum page. Some animations and respacing to make them work better.

--- a/source/sass/_rows.scss
+++ b/source/sass/_rows.scss
@@ -264,97 +264,6 @@
   background-color: rgba($white, 0.6);
 }
 
-.faq-row {
-  $faq-links-padding-top: modular-scale(4);
-
-  display: inline-block;
-  position: relative;
-
-  aside {
-    @include media($desktop) {
-      @include span-columns(4);
-    }
-
-    .faq-links {
-      @include media($desktop) {
-        padding-top: $faq-links-padding-top;
-        width: em(300);
-      }
-      a {
-        text-decoration: none;
-      }
-    }
-
-    .faq-link {
-      display: block;
-      outline: none;
-      padding: modular-scale(-3) 0;
-
-      &:last-child {
-        margin-bottom: $base-spacing;
-      }
-
-      @include media($desktop) {
-        text-align: right;
-        margin-right: $base-spacing;
-      }
-    }
-  }
-
-  .faq {
-    text-align: left;
-
-    &:last-child {
-      margin-bottom: modular-scale(3);
-    }
-  }
-
-  @include media($desktop) {
-
-    .fixed-top {
-      position: fixed;
-      top: $faq-links-padding-top;
-    }
-
-    .fixed-bottom {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-    }
-  }
-
-  article {
-    h4 {
-      margin: 0 0 0.5em 0;
-      text-align: left;
-    }
-
-    p {
-      color: $base-font-color;
-      line-height: $base-line-height;
-    }
-
-    .question {
-      p {
-        margin-bottom: 2em;
-        text-align: left;
-      }
-      ul {
-        @include ma-unordered-list;
-        margin-bottom: 2em;
-      }
-      &:last-of-type p {
-        margin-bottom: 0;
-      }
-    }
-
-    @include media($desktop) {
-      @include span-columns(8);
-      vertical-align: top;
-    }
-  }
-}
-
 .image-grid-row {
   @include ma-row;
   img {
